--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 # Client environment variables for Vite
 # Use VITE_WS_URL to point to your Socket.IO server (Render URL in production)
 # Example for production: VITE_WS_URL=https://your-server.onrender.com
-VITE_WS_URL=http://localhost:3001
+VITE_WS_URL=https://countdown-by-tmj.onrender.com
